Fix mac text visibility issue by setting font color explicitly.

--- a/data/style.css
+++ b/data/style.css
@@ -1,6 +1,7 @@
 body {
   font: 100% arial, helvetica, sans-serif;
   background-color: #F5F5F5;
+  color: black;
 }
 textarea {
   width: 180px;
